--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -30,7 +30,7 @@ border-radius: 10px;margin-top: 20px;}
 
 
 /*1.0版本CSS*/
-page{font-family: 'PingFangSC-Regular'}
+page{background: white; font-family: 'PingFangSC-Regular'}
 .page-head-title{display: flex;flex-direction: row;margin-top: 10px;margin-bottom: 5px;font-size: 14px}
 .w_logo{width: 30%;align-items: center;justify-content: center;position: relative}
 .image{position: absolute;top: -4rpx}
