--- a/pages/mx_zhongjiang/mx_zhongjiang.wxss
+++ b/pages/mx_zhongjiang/mx_zhongjiang.wxss
@@ -13,6 +13,7 @@
 /*.box_list .col .text{overflow: hidden;text-overflow: ellipsis;}*/
 /* pages/xiangqingye(new)/xiangqingye(new).wxss */
 
+page{background: #f1f4f7}
 .box_huzhu{margin: 10px;background: white;border-radius: 10px;padding: 10px}
 .huzhu_box{text-align:center;font-size:14px;padding:7px 0px}
 .timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
