--- a/pages/mx_xieyi/mx_xieyi.wxml
+++ b/pages/mx_xieyi/mx_xieyi.wxml
@@ -20,12 +20,12 @@
       </checkbox-group>
      </view>
      
-     <view class='' style='text-align:center'>
+     <!--view class='' style='text-align:center'>
        <text class='' style='font-size:13px'>提交</text>
         <text class='' bindtap='downLoad' style='font-size:13px;text-decoration:underline;color:#5ecd98'>《小梦想互助幸运者梦想互助金申请公函》</text>
-     </view>
+     </view-->
     <view class='yz_group row' style='width:70%;margin:10px auto'>
-      <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitDream'>提交</button></view>
+      <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitDream'>{{verify?"提交审核":"提交"}}</button></view>
       </view>
     </view>
  </view>
