--- a/pages/mx_huzhu/mx_huzhu.wxss
+++ b/pages/mx_huzhu/mx_huzhu.wxss
@@ -1,9 +1,65 @@
-/* pages/mx_huzhu/mx_huzhu.wxss */
-page{background:white}
-.container{background:white}
-.page-header{height: 20px}
-.box_huzhu{margin: 15px;background: #f1f4f7;border-radius: 10px;box-shadow: 0px 5px 5px #e0e9f1;padding: 15px;}
-.font_s13{font-size: 13px;color:#696262}
-.bloc{margin-top: 5px}
-.bloc_guize{font-size: 20px;padding-top: 20px;display: block}
-.list_zhankai{color:#5ecd98;text-decoration: underline }
+/* 互助规则样式表 */
+/* 详细规则--样式处理 */
+page{
+    background-color: #edf0f5;
+}
+.rules{
+    width: 100%;
+    border-top: 2rpx solid #d2d0cf;
+}
+.rules .rules_main{
+    width: 100%;
+}
+.rules .rules_main .rules_info{
+    width: 100%;
+    background-color: #fff;
+}
+.rules .rules_main .rules_list{
+    width: 710rpx;
+    margin: 0 auto;
+    background-color: #fff;
+    padding-top: 26rpx;
+    font-size: 30rpx;
+    padding-bottom: 30rpx;
+}
+.rules .rules_main .rules_info .icon{
+    width: 36rpx;
+    height: 36rpx;
+    background-size: 36rpx 36rpx;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    margin-right: 10rpx; 
+    display: inline-block;
+    vertical-align: bottom;
+}
+.rules .rules_main .rules_info .icon_index1{
+    background-image: url(http://tdream.antit.top/image/active_index1.png);
+}
+.rules .rules_main .rules_info .icon_index2{
+    background-image: url(http://tdream.antit.top/image/avtive_index2.png);
+}
+.rules .rules_main .rules_info .icon_index3{
+    background-image: url(http://tdream.antit.top/image/avtive_index3.png);
+}
+.rules .rules_main .rules_info .icon_index4{
+    background-image: url(http://tdream.antit.top/image/active_index4.png);
+}
+.rules .rules_main .rules_info .rules_message{
+    color: #999;
+    width: 618rpx;
+    margin: 20rpx auto 0;
+    font-size: 28rpx;
+}
+.rules .rules_main .rules_info .line{
+     width: 100%;
+     background-color: #edf0f5;
+     height: 20rpx;
+}
+.rules .rules_main .rules_info .rules_list .subtitle{
+    font-size: 30rpx;
+    color: #000;
+    padding-top: 50rpx;
+}
+.rules .rules_main .rules_info .rules_list .steps{
+    padding-top: 45rpx;
+}
