--- a/pages/mx_phone/mx_phone.wxml
+++ b/pages/mx_phone/mx_phone.wxml
@@ -1,22 +1,24 @@
-<!--pages/mx_phone/mx_phone.wxml-->
-<view class=''>
- <view class='page-header'></view>
- <view class='page-body'>
-  <view class='box_huzhu'>
-    <text wx:if='{{tele!="未绑定手机号"}}' class='bloc'>当前手机号</text>
-    <text wx:if='{{tele!="未绑定手机号"}}' class='bloc' style='text-align:center'>{{tele}}</text>
-    <text wx:if='{{tele!="未绑定手机号"}}' class='bloc'>修改为：</text>
-    <text wx:if='{{tele=="未绑定手机号"}}' class='bloc'>请输入手机号：</text>
-    <input type='number' placeholder="请输入您的手机号" maxlength="11" class='mx_number bloc' bindinput="teleInput" style='margin-top:20px' value="{{inputTele}}"/>
-    <view class='yz_group row' style='width:70%;margin:10px auto'>
-    <view class='col' style='margin-top:30px'>
-    <view class='col-7'><input class='bloc mx_yzput' type='number' bindinput="codeInput" placeholder="请输入验证码" value="{{inputCode}}" /></view>
-    <!-- <view class='col-1'></view> -->
-    <view class='col-5' style='margin-top:5px;'> <button class='mx_yanzheng' bindtap='generateCode'>获取验证码</button></view>
-      </view>
-        <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitCode'>提交</button></view>
-    </view>
-  
-  </view>
- </view>
+
+<!--手机号管理页面-->
+<!-- 
+    title：标题
+    oldPhoneNum：当前绑定的手机号
+    phoneNum：要绑定的手机号
+    auth_code:数字验证码
+ -->
+<view class='phoneMangement'>
+    <view class='title'>输入需要绑定的手机号</view>
+    <view class='oldPhoneNum' style='display:{{isphone ? "block" : "none"}}'>当前绑定的手机号{{oldPhoneNum}}</view>
+    <form bindsubmit='submit'>
+        <view class='phoneNum' style='margin-top:{{isphone ? 85 : 132}}rpx'>
+            <view class='icon icon_phone'></view>
+            <input placeholder='请输入需要绑定的手机号' name="phoneNum" type='number' maxlength='11' focus='true' value='{{inputTele}}' bindinput="teleInput" bindblur='check'></input>
+        </view>
+        <view class='auth_code'>
+            <view class='icon icon_mail {{changebg ? "focus" : ""}}'></view>
+            <input placeholder='验证码' name="code" type='number' bindinput="codeInput" maxlength='6' value='{{inputCode}}' bindfocus='changebg'></input>
+            <button bindtap='generateCode' class='getCode {{isdisable ? "disabled" : ""}}' disabled='{{isdisable}}' >{{tip}}</button>
+        </view>
+        <button bindtap='submitCode'>提交</button>
+    </form>
 </view>
