--- a/pages/mx_wenti/mx_wenti.wxss
+++ b/pages/mx_wenti/mx_wenti.wxss
@@ -1,8 +1,27 @@
-/* pages/mx_huzhu/mx_huzhu.wxss */
-page{background:white}
-.container{background:white}
-.page-header{height: 20px}
-.box_huzhu{margin: 15px;background: #f1f4f7;border-radius: 10px;box-shadow: 0px 5px 5px #e0e9f1;padding: 15px;}
-.font_s13{font-size: 13px;color:#696262}
-.bloc{margin-top: 5px}
-.bloc_guize{font-size: 20px;padding-top: 20px;display: block}
+/* 问题详情样式表 */
+page{
+    background-color: #f0f0f0;
+}
+.question{
+    background-color: #fff;
+    margin-top: 38rpx;
+}
+.questionInfo{
+    width: 690rpx;
+    margin: 0 auto;
+}
+.questionInfo .question_list{
+    border-bottom: 2rpx solid #ddd;
+    padding-top: 30rpx;
+}
+.questionInfo .title{
+    font-size: 32rpx;
+    padding-bottom: 30rpx;
+}
+.question_list .info{
+    display: inline-block;
+    text-indent: 2em;
+    font-size: 26rpx;
+    color: #999;
+    padding-bottom: 30rpx;
+}
